--- a/assets/styles/pages/signup.scss
+++ b/assets/styles/pages/signup.scss
@@ -12,7 +12,7 @@
 
   #profile-img-input {
     position: relative;
-    margin-block: var(--spacer-300) var(--spacer-700);
+    margin-block: var(--spacer-300) var(--spacer-500);
 
     .c-img-input {
       --clusterSpacer: var(--spacer-200);
